[FIX] covered  navbar by main section

--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,6 @@ body {
     position: relative;
     width: 100%;
     padding: 200px 0 20px 0;
-    z-index: 1;
 }
 
 .main-box {
